--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <!-- About -->
 <section id="about">
   <div class="middle-container">
-  <h1>About Us</h1>
+  <h1>About</h1>
   <div class="about-container">
     <div><img src="./images/pexels-nataliya-vaitkevich-7615618.jpg" alt="" height="400px" width="500px" class="about-image"></div>
     <div class="about-text">Althea Homeo Care is the vision behind<br> Dr. Y. Arun T Pratheesh (B.H.M.S.,M.D(Hom)) to provide first class healthcare services to his patients and relatives</div>
