--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 </head>
 <body>
   <!-- header -->
-  <div class="top-container">
-  <section id="header">
+  <section id="header" class="top-container">
   <div class="container">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4">
       <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -30,12 +29,12 @@
       </ul>
     </header>
   </div>
-</section>
+
 <!-- hero -->
-<section id="hero">
+
   <div class="hero-text"># Top Rated Homeo Care in Kanyakumari District</div>
 </section>
-</div>
+
 <!-- About -->
 <section id="about">
   <div class="middle-container">
